fix alignment issue

--- a/css/style.css
+++ b/css/style.css
@@ -66,11 +66,7 @@ ul.footer-links-ul li {
   padding: 1em;
   position: absolute;
   text-shadow: 2px 2px 2px black;
-  -webkit-transform: translateY(250%);
   width: 100%; }
-  @media screen and (max-width: 399px) {
-    .name-card {
-      transform: translateY(100%); } }
 
 .navbar-fixed {
   height: 0; }
@@ -175,8 +171,6 @@ ul.footer-links-ul li {
   @media screen and (max-width: 399px) {
     .splash {
       background: url(../img/bg-small.jpg); } }
-  .splash .splash-name {
-    padding-bottom: .25em; }
 
 .state-country-font {
   background: -webkit-linear-gradient(#eee, #333);
